[gd_scene load_steps=4 format=3 uid="uid://brhmupxo2xjim"]

[ext_resource type="Script" path="res://scenes/game/levels/objects/change_scene/door_change_scene.gd" id="1_o73yr"]
[ext_resource type="Texture2D" uid="uid://m3tvxr1kx8id" path="res://assets/sprites/treasure_hunters/pirate_ship/sprites/decorations/door/opening/Portal_100x100px11.png" id="2_24h85"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0pukn"]
size = Vector2(37, 45)

[node name="DoorChangeScene" type="Node2D"]
script = ExtResource("1_o73yr")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, 28.5)
scale = Vector2(1.04, 1.13)
texture = ExtResource("2_24h85")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 26)
shape = SubResource("RectangleShape2D_0pukn")

[node name="Panel" type="Panel" parent="."]
clip_contents = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 21.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelDoorKeysAmount" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -62.0
offset_right = 62.0
offset_bottom = 26.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "0/2"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Panel2" type="Panel" parent="."]
clip_contents = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = 23.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelDoorKeys" type="Label" parent="Panel2"]
visible = false
texture_filter = 6
layout_mode = 0
offset_top = 1.0
offset_right = 31.0
offset_bottom = 17.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 7
text = "[ff],[ff],[ff],"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
clip_text = true
text_overrun_behavior = 3
uppercase = true

[node name="RichTextLabelDoorKeys" type="RichTextLabel" parent="Panel2"]
texture_filter = 2
layout_mode = 0
offset_top = 1.0
offset_right = 31.0
offset_bottom = 17.0
theme_override_colors/default_color = Color(1, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "[center]0[/center]
"
autowrap_mode = 2

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
